style.css - adjusted z indez for navbar, to fix navbar not working properly; removed profile background image on smaller screens, to give a cleaner profilepage

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,7 +98,7 @@ nav {
   position: fixed;
   bottom: 5rem;
   left: 2rem;
-  z-index: -5;
+  z-index: 0;
 }
 
 nav ul {
@@ -500,7 +500,7 @@ and so is proofed against whatever image the user uploads*/
   height: 100%;
   min-height: 100vh;
   width: 90vw;
-  background-image: url(/static/images/8501f2d921fdc9a72998a77d57ca0359.webp);
+  background-image: url(/static/images/lc-boats.webp);
   background-size: cover;
   margin: auto;
   position: relative;
@@ -620,6 +620,11 @@ and so is proofed against whatever image the user uploads*/
   /* makes the images that appear at the top of the reviews disappear */
   .card-img {
     display: none;
+  }
+
+  /* on smaller screens, the background profile image grabs too much attention, so this remedies that */
+  .container-profile{
+    background-image: none;
   }
 
 }
